...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.activities.onboardingActivity.OnboardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navigationOnboardingControllerContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="9dp"
            android:background="@color/backgroundColor"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/progressIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/onboarding_navigation_graph" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
...
            android:background="@color/dividerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionPickingHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemPickRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:maxHeight="800dp"
            android:nestedScrollingEnabled="true"
...
